network-policy-demo/end_demo/hacker/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/description: "Home of evil hackers"
    openshift.io/display-name: "hacker"
  name: hacker
spec: {}
